--- a/control/control_implementation.tex
+++ b/control/control_implementation.tex
@@ -23,8 +23,8 @@
         defines a point-mass suspended with a rigid cable which is attached to the \gls{CoM} of the multirotor.
         This is a simplistic suspended payload model but represents the dynamics of many practical payloads well.
         In this section, the simulated payload model complies will all these assumptions.
+        This payload model is also used for simulations with an \gls{LQR} controller in other studies \cite{Erasmus2020, Slabber2020}.
         The simulation model used in this section was verified with practical data in Section~\ref{sec:model_verification}.
-        This is also the payload model used for simulations with an \gls{LQR} controller by \cite{Erasmus2020} and \cite{Slabber2020}
 
         \input{control/plots/compare_control_vel.tex}
 
