--- a/exp_design/exp_design.tex
+++ b/exp_design/exp_design.tex
@@ -6,7 +6,7 @@
 
     \paragraph
     As discussed in the literature study in Chapter~\ref{chap:lit_study}, experimental data is a valuable part of any work involving multirotors control.
-    This chapter will provide an overview of the hardware, software, HITL simulations, and practical methodology used in this work.
+    This chapter will provide an overview of the hardware, software, \gls{HITL} simulations, and practical methodology used in this work.
 
     \FloatBarrier\section{Hardware components}
 
@@ -169,18 +169,18 @@
 
             \paragraph
             MATLAB/Simulink was used to convert the \gls{MPC} controller developed in Section~\ref{sec:mpc} to C\texttt{++} code and generate a standalone \gls{ROS} node.
-            Figure~\ref{fig:MAVROS} illustrates how the MPC node is used as an offboard controller with PX4 and MAVROS.
+            Figure~\ref{fig:MAVROS} illustrates how the \gls{MPC} node is used as an offboard controller with PX4 and MAVROS.
             A MAVROS Master node receives data, including state estimates, from PX4 through MAVLink communication. 
-            This data is published by MAVROS to various ROS topics.
-            State estimate data is received by the MPC node by subscribing to the appropriate MAVROS topic.
-            After the MPC node calculates the next controller decision, it publishes the controller setpoint data to a MAVROS topic.
+            This data is published by MAVROS to various \gls{ROS} topics.
+            State estimate data is received by the \gls{MPC} node by subscribing to the appropriate MAVROS topic.
+            After the \gls{MPC} node calculates the next controller decision, it publishes the controller setpoint data to a MAVROS topic.
             The MAVROS node then sends it to PX4 via MAVLink.
 
     \FloatBarrier\section{Hardware-in-the-Loop simulations} \label{sec:exp_design_hitl}
 
         \paragraph
         In \gls{HITL} simulations, the simulator mimics the sensor outputs, but the PX4 firmware and the accompanying software runs on the designated hardware.
-        Figure~\ref{fig:HITL} illustrates how the different software and hardware components interlink for HITL simulations.
+        Figure~\ref{fig:HITL} illustrates how the different software and hardware components interlink for \gls{HITL} simulations.
         
         \paragraph
         \gls{QGC} runs on the desktop computer and communicates with the Gazebo simulator with MAVlink messages over a local \gls{UDP} connection.
@@ -190,12 +190,12 @@
         \paragraph
         The PX4 firmware runs on the \gls{FC} board.
         Based on the received sensors values, the PX4 controllers determine \gls{PWM} actuator commands which are communicated back to Gazebo.
-        The \gls{OBC} runs the MPC and MAVROS nodes which send and receive MAVLink messages over a serial port connection to the \gls{FC}.
+        The \gls{OBC} runs the \gls{MPC} and MAVROS nodes which send and receive MAVLink messages over a serial port connection to the \gls{FC}.
 
         \begin{figure}[ht]
             \centering
             \includegraphics[width=0.8\linewidth]{exp_design/fig/HITL}
-            \caption{Different software and hardware components of a HITL simulation}
+            \caption{Different software and hardware components of a \gls{HITL} simulation}
             \label{fig:HITL}
         \end{figure}
 
