--- a/glossary.tex
+++ b/glossary.tex
@@ -93,3 +93,4 @@
 \newacronym{ILC}{ILC}{Iterative Learning Control}
 \newacronym{BISMC}{BISMC}{Back-Stepping Integral Sliding Mode Control}
 
+% ?? Cntr F all gls \gls{LQR} and MPC
