Editted introduction but without grammarly

--- a/appendices/appendices.tex
+++ b/appendices/appendices.tex
@@ -3,6 +3,8 @@
 \label{appen:pid_gains}
 
 This is an appendix about \gls{PID} gains used for Honeybee.
+% ?? Add something to appendix
+% Maybe PID gains of Honeybee
 
 \chapter{Random appendix}
 \makeatletter\@mkboth{}{Appendix}\makeatother
